# Sikuli-D

./: .gitignore  Cargo.toml  LICENSE  README.md  SikuliX_sample.py  clippy.toml  codecov.yml  deny.toml  rustfmt.toml
.claude/: CLAUDE.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: api-compile.yml  api-snapshot.yml  ci.yml  eval.yml  ide-compile.yml  ide-snapshot.yml  release.yml  rust-build.yml  semantic-version.yml
API/: pom.xml
API/src/main/java/org/sikuli/basics/: Debug.java
API/src/main/java/org/sikuli/script/: Image.java  Key.java  ObserveEvent.java  Offset.java  Region.java  SX.java  Sikulix.java
API/src/main/java/org/sikuli/support/: Commons.java  RunTime.java
IDE/: pom.xml
IDE/src/main/java/org/sikuli/ide/: EditorConsolePane.java  GifDecoder.java  SikuliEditorKit.java  SikulixIDE.java
IDE/src/main/java/org/sikuli/support/ide/: Runner.java
IDE/src/main/resources/i18n/: IDE_ja.properties
core-rs/: BENCHMARK_RESULTS.md  BUILD_GUIDE.md  CHANGELOG.md  Cargo.toml  OBSERVER_IMPLEMENTATION.md  OCR_API_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PyO3_IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  THIRD_PARTY_LICENSES.md  pyoxidizer.bzl  pyproject.toml  test_bindings.py
core-rs/benches/: matching.rs  ncc_calculation.rs  screen_capture.rs
core-rs/docs/: HIGHLIGHT_OVERLAY.md
core-rs/examples/: highlight_demo.rs  observer_demo.rs
core-rs/python/sikulix/: __init__.py
core-rs/src/: color.rs  color_struct.txt  input.rs  lib.rs  location.rs  observer.rs  project.rs
core-rs/src/app/: linux_impl.rs  macos_impl.rs  mod.rs  windows_impl.rs
core-rs/src/debug/: IMPLEMENTATION.md  README.md  debugger.rs  highlight.rs  highlight_linux.rs  mod.rs  tests.rs
core-rs/src/highlight/: IMPLEMENTATION_NOTES.md  linux_overlay.rs  macos_overlay.rs  mod.rs  windows_overlay.rs
core-rs/src/image/: matcher.rs  mod.rs  ocr.rs
core-rs/src/plugin/: mod.rs
core-rs/src/python/: README_PyO3.md  bindings.rs  detector.rs  executor.rs  mod.rs
core-rs/src/screen/: coordinates.rs  linux.rs  macos.rs  mod.rs  windows.rs
core-rs/src/settings/: mod.rs
core-rs/src/timeout/: README.md  mod.rs
core-rs/tests/: INTEGRATION_TESTS.md  observer_integration_test.rs  test_ocr_api.rs
core-rs/tests/fixtures/: README.md
core-rs/tests/fixtures/scripts/: test_error.py  test_japanese.py  test_sikuli.py  test_simple.py
core-rs/tests/integration/: debugger_workflow_test.rs  input_integration_test.rs  python_integration_test.rs  screen_matcher_test.rs  test_error.py  test_japanese.py  test_large_output.py  test_long_running.py  workflow_test.rs
doc/: EXECUTION_PLAN.md  ROADMAP.md
doc/design/: RECORDING_FEATURE.md
docs/: .gitignore  CI-CD-GUIDE.md  CICD-IMPLEMENTATION-SUMMARY.md  README.md  index.md  package.json
docs/.vitepress/: config.ts
docs/api/: index.md
docs/design/: multimonitor-dpi-design.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/ja/: index.md
docs/ja/api/: index.md
docs/ja/getting-started/: index.md  installation.md  quick-start.md
ide-rs-tauri/: CHANGELOG.md  Cargo.toml  DEBUG_PANEL_IMPLEMENTATION.md  EXECUTION_ENGINE_IMPLEMENTATION.md  IMAGE_LIBRARY.md  OCR_IMPLEMENTATION.md  README.md  build.rs  package-lock.json  package.json  playwright.config.ts  tauri.conf.json  wdio.conf.js
ide-rs-tauri/capabilities/: default.json
ide-rs-tauri/examples/: DebugPanel.tsx  ImageLibrary.tsx
ide-rs-tauri/scripts/: test-ide.js
ide-rs-tauri/src/: capture.rs  debug.rs  execution.rs  image_library.rs  main.rs  ocr.rs  pattern.rs  plugins.rs  settings.rs
ide-rs-tauri/src-frontend/: capture.html  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
ide-rs-tauri/src-frontend/src/: App.tsx  index.css
ide-rs-tauri/src-frontend/src/components/: CodeMode.tsx  Console.tsx  FlowMode.tsx  Header.tsx  PropertyPanel.tsx  SimpleMode.tsx  Toolbox.tsx  index.ts
ide-rs-tauri/src-frontend/src/hooks/: index.ts  useTauri.ts
ide-rs-tauri/src-frontend/src/types/: script.ts
ide-rs-tauri/src-frontend/src/utils/: logger.ts  pythonParser.ts
ide-rs-tauri/src-frontend/tests/: QUICK_START.md  README.md  TEST_SUMMARY.md  check-running-ide.spec.ts  code-mode.spec.ts  debug-api-widget.spec.ts  editor-operations.spec.ts  file-operations.spec.ts  image-widget-mock.spec.ts  image-widget.spec.ts  tauri-integration.spec.ts  view-modes.spec.ts  yesman-widget.spec.ts
ide-rs-tauri/tests/e2e/: fixtures.ts  ide.spec.ts
ide-rs-tauri/tests/wdio/: ide.spec.js
ide-rs-tauri/types/: debug.ts  image-library.d.ts
runtime-rs/: Cargo.toml  README.md  README_REPL.md  REPL_FILES.txt  REPL_IMPLEMENTATION_SUMMARY.md  REPL_QUICKSTART.md  USAGE.md
runtime-rs/examples/: repl_startup.py
runtime-rs/sikuli/: __init__.py
runtime-rs/sikulid_api/: __init__.py  finder.py  input.py  location.py  pattern.py  py2to3.py  region.py  screen.py
runtime-rs/sikulix_api/: __init__.py  finder.py  input.py  match.py  screen.py
runtime-rs/src/: bundle.rs  converter.rs  hotkey.rs  main.rs  runner.rs
runtime-rs/src/python/: mod.rs
runtime-rs/src/repl/: completer.rs  mod.rs  special_commands.rs  tests.rs
scripts/: build.sh  increment_patch.sh  run-ci-checks.bat  run-ci-checks.sh  run_benchmarks.bat  run_benchmarks.sh
