[package]
name = "sikulix-core"
version = "0.1.0"
edition = "2021"
authors = ["Sikuli-D Team"]
description = "Next-generation SikuliX core library in Rust"
license = "MIT"
repository = "https://github.com/daitamu/Sikuli-D"

[lib]
name = "sikulix_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Image processing
image = "0.25"
imageproc = "0.25"

# OpenCV bindings (optional, for advanced matching)
# opencv = { version = "0.92", features = ["imgproc", "imgcodecs"], optional = true }

# OCR - Tesseract bindings via leptess
leptess = { version = "0.14", optional = true }

# Python integration
pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime (for future use)
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest"] }

[features]
default = []
python = ["pyo3"]
opencv = []
ocr = ["leptess"]
async = ["tokio"]
full = ["python", "opencv", "ocr", "async"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matching"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
