[package]
name = "sikulid-core"
version = "0.1.3"
edition = "2021"
authors = ["Sikuli-D Team"]
description = "Next-generation Sikuli-D core library in Rust"
license = "Apache-2.0"
repository = "https://github.com/daitamu/Sikuli-D"

[lib]
name = "sikulid"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Image processing
image = "0.25"
imageproc = "0.25"

# OpenCV bindings (optional, for advanced matching)
# opencv = { version = "0.92", features = ["imgproc", "imgcodecs"], optional = true }

# OCR - Tesseract bindings via leptess
leptess = { version = "0.14", optional = true }

# Python integration
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Parallel processing
rayon = "1.10"

# Platform directories
dirs = "6.0"

# Async runtime (for future use)
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest"] }
libc = "0.2"

[features]
default = []
python = ["pyo3"]
opencv = []
ocr = ["leptess"]
async = ["tokio"]
full = ["python", "opencv", "ocr", "async"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "matching"
harness = false

[[bench]]
name = "screen_capture"
harness = false

[[bench]]
name = "ncc_calculation"
harness = false

# Note: Profile settings are defined in workspace root Cargo.toml
# 注: プロファイル設定はワークスペースルートのCargo.tomlで定義
