[package]
name = "sikulix-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Sikuli-D Team"]
description = "SikuliX headless runtime - Run SikuliX scripts without GUI"
license = "MIT"
repository = "https://github.com/daitamu/Sikuli-D"

[[bin]]
name = "sikulix"
path = "src/main.rs"

[dependencies]
# Core library
sikulix-core = { path = "../core-rs" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Image processing
image = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Path handling
walkdir = "2.4"

# REPL support
rustyline = "14.0"
dirs = "5.0"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
