[package]
name = "sikulid-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Sikuli-D Team"]
description = "Sikuli-D headless runtime - Run Sikuli-D scripts without GUI"
license = "MIT"
repository = "https://github.com/daitamu/Sikuli-D"

[[bin]]
name = "sikulid"
path = "src/main.rs"

[dependencies]
# Core library
sikulid-core = { path = "../core-rs" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Image processing
image = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Path handling
walkdir = "2.4"

# REPL support
rustyline = "14.0"
dirs = "5.0"

# Process management
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = []

# Note: Profile settings are defined in workspace root Cargo.toml
# 注: プロファイル設定はワークスペースルートのCargo.tomlで定義
